@@ -1,0 +1,6 @@
+#include <stdbool.h>
+
+bool pdknotUsed(const char *what, lineNode *endPl, lineNode *head);
+bool pdknotUsedFrom(const char *what, const char *label, lineNode *head);
+int pdkinstructionSize(lineNode *node);
+
